<resources>
    <string name="app_name">My Mall</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Email_Id">Email ID</string>
    <string name="Password">Password (minimo 8)</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="SignIn">Sign In</string>
    <string name="or">or</string>
    <string name="dont_have_account">Don´t have an account?Sign Up!</string>
    <string name="Name">FullName</string>
    <string name="PasswordConfirm">Confirm Password</string>
    <string name="SignUp">Sign Up</string>
    <string name="Already_account">Already have an account?Sign In!</string>
    <string name="PasswordSignIn">Password</string>
    <string name="Dont_worry_email">Don´t worry, we just need your registered
        email address and its done!!</string>
    <string name="Reset_password">Reset Password</string>
    <string name="check_imbox">Check your imbox after clickend button above.</string>
    <string name="god_back">&lt;&lt; GO BACK</string>
    <string name="Recovery">Recovery email sent successfully ! check your imbox</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="carst">Cart</string>
    <string name="full_name">Full name</string>
    <string name="Email_address">Email Address</string>
    <string name="my_mall">My Mall</string>
    <string name="my_orders">My Orders</string>
    <string name="my_reward">My Rewards</string>
    <string name="my_carts">My Carts</string>
    <string name="my_favorite">My Favorite</string>
    <string name="my_accounts">My Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="home">Home</string>
    <string name="Deal_of_the_day">Deals of the Day!</string>
    <string name="view_all">View All</string>
    <string name="Redmi">Redmi 5A</string>
    <string name="SD_PROCESS">SD 425 Processor</string>
    <string name="from_rs">From Rs.5999</string>
    <string name="grid_product_title">Title</string>
</resources>
