<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_my_mall"
            android:icon="@drawable/my_orders"
            android:title="@string/my_mall" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/my_ord"
            android:title="@string/my_orders" />
        <item
            android:id="@+id/nav_rewards"
            android:icon="@drawable/my_rewards"
            android:title="@string/my_reward" />
        <item
            android:id="@+id/nav_carts"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/my_carts" />

        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite_black_24dp"
            android:title="@string/my_favorite" />

        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/my_accounts" />

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/sign_out" />
    </group>

</menu>
