<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_search_icon"
        android:orderInCategory="100"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/main_notification_icon"
        android:orderInCategory="100"
        android:icon="@drawable/ic_notifications_white_24dp"
        android:title="@string/notification"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/main_carts_icon"
        android:orderInCategory="100"
        android:icon="@drawable/ic_shopping_cart_white_24dp"
        android:title="@string/carst"
        app:showAsAction="ifRoom" />
</menu>
